mod:修改Nav布局&add：视频卡片

--- a/h-fontend/src/styles/base.scss
+++ b/h-fontend/src/styles/base.scss
@@ -27,13 +27,18 @@ body {
 #app {
     user-select: none;
     margin: 0;
-    padding: 0
+    padding: 0;
 }
 
 a {
     color: #000;
     text-decoration: none;
 }
+
 ul {
     list-style: none;
+}
+
+img {
+    width: 100%;
 }
